hphp/hack/test/typecheck/constraints/function.php.like_types.exp
File "function.php", line 5, characters 14-29:
Some type constraint(s) here are violated (Typing[4110])
File "function.php", line 3, characters 22-22:
'T' is a constrained type parameter
File "function.php", line 3, characters 27-29:
Expected ~num because it is an unenforceable type
File "function.php", line 5, characters 25-28:
But got ~?int
