hphp/hack/test/typecheck/constraints/function.php
<?hh

interface Constraint<T as num> {}

function foo(Constraint<?int> $c): void {}
